cada animatronico que necesita tener un lado para que le cierres la puerta lo tiene ahora, necesito añadir el poder cerrarles la puerta y la funcionalidad entera de la batería